# finance-tracker

./: .gitignore  Cargo.toml  README.md  accounts.json  docker-compose.yml
migrations/: 20240101000000_create_accounts.sql
src/: main.rs  models.rs  storage.rs
src/application/dto/: mod.rs
src/application/ports/: account_repository.rs
src/application/services/: account_service.rs  mod.rs
src/domain/: errors.rs
src/domain/entities/: account.rs
src/infrastructure/: config.rs
src/infrastructure/database/: postgres_account_repository.rs
src/presentation/api/: error.rs  routes.rs
src/presentation/api/handlers/: account_handlers.rs  mod.rs
